# GB_01_CPPBasics

./: CMakeLists.txt  base.h  common.h  data.cpp  game.cpp  game.h  helpers.cpp  helpers.h  hw5.cpp  hw5.rc  hw5.sln  hw5.vcxproj  main.cpp  mylib.cpp  mylib.h  resource.h  stdafx.cpp
app/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  main_window.ui
lib/: CMakeLists.txt  hw.cpp  hw.h  lib_global.h
